--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,16 @@
 {
-  "name": "Steem Tool",
-  "description": "Steem Tool",
+  "name": "Steem Tools",
+  "description": "Steem Tools",
   "version": "1.1.11",
   "permissions": [
-    "activeTab",
-    "tabs"
+    "activeTab"
   ],
   "background": {
     "scripts": ["background.js"],
     "persistent": false
   },
   "browser_action": {
-    "default_title": "Steem Tool",
+    "default_title": "Steem Tools",
     "default_icon": "steemit.png",
     "default_popup": "popup.html"
   },
